Fixed Overflow list Phone

--- a/src/index.css
+++ b/src/index.css
@@ -1811,3 +1811,7 @@ input:checked + .slider:before {
 .divsignup{
     background-color: #e74c3c !important;
 }
+.showVideosDiv{
+    overflow-x: hidden;
+}
+
